[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/HUD/Hearts/HeartBG.png" type="Texture" id=1]
[ext_resource path="res://Assets/HUD/Hearts/PNG/basic/heart.png" type="Texture" id=2]
[ext_resource path="res://Assets/HUD/Hearts/Heart_BG.tres" type="Material" id=3]
[ext_resource path="res://Assets/HUD/HUD.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/BreatheFireIII_Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/HUD/LevelText.gd" type="Script" id=6]
[ext_resource path="res://ExperienceBar.tscn" type="PackedScene" id=7]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="HeartBox_BG" type="MarginContainer" parent="."]
margin_left = 38.0
margin_top = 37.0
margin_right = 273.0
margin_bottom = 102.0

[node name="HeartBG" type="TextureRect" parent="HeartBox_BG"]
material = ExtResource( 3 )
margin_right = 235.0
margin_bottom = 65.0
texture = ExtResource( 1 )
expand = true

[node name="HeartBox" type="HBoxContainer" parent="."]
margin_left = 40.0
margin_top = 40.0
margin_right = 274.0
margin_bottom = 108.0

[node name="Heart1" type="TextureRect" parent="HeartBox"]
margin_right = 75.0
margin_bottom = 68.0
grow_horizontal = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="Heart2" type="TextureRect" parent="HeartBox"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="Heart3" type="TextureRect" parent="HeartBox"]
margin_left = 158.0
margin_right = 234.0
margin_bottom = 68.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true

[node name="ExpBar" type="HBoxContainer" parent="."]
margin_left = 46.0
margin_top = 121.0
margin_right = 531.0
margin_bottom = 174.0

[node name="ExperienceBar" parent="ExpBar" instance=ExtResource( 7 )]

[node name="LevelText" type="Label" parent="ExpBar"]
margin_left = 400.0
margin_right = 485.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
custom_fonts/font = ExtResource( 5 )
text = "1"
align = 1
valign = 1
uppercase = true
script = ExtResource( 6 )

[connection signal="experience_gained" from="." to="ExpBar/ExperienceBar" method="_on_Control_experience_gained"]
